Fri Dec  4 14:32:59 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb, conf.rb: [REQ#172]対応
	* b-merge-group_by.rb: ログ出力先を変更
	* mod-group-by.rb: [REQ#168] ソートが不完全だった
	* port.rb: [REQ#25] popにも対応

Thu Dec  3 20:17:14 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-merge-group.rb, port.rb: [SR#25]対応

Thu Dec  3 17:32:36 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controlle.rb: Pool変数にHASH_SEED追加
	* b-merge-group_by.rb: [SR#102]対応忘れ
	* mod-group-by.rb: [REQ#168]対応

Wed Dec  2 17:30:00 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: [BUG#170]対応. 

Wed Dec  2 16:30:56 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* master.rb, node.rb, controller.rb, processor.rb: [REQ#169]対応
	* b-merge-group_by.rb: queueのオプション設定間違い
	* mod-group-by.rb: [REQ#167]対応(まだ途中)
	* port.rb: [REQ#168] @sort_byの指定変更

Wed Nov 25 22:39:17 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb, conf.rb: [REQ#168]対応. SortedQueue

Wed Nov 25 13:56:02 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-mod-group-by.rb, port.rb: Ruby-BUG#2390 対応

Fri Nov 20 15:31:03 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-mod-group-by.rb: [REQ#166]対応.

Thu Nov 19 23:12:19 2009  Keiju Ishitsuka  <keiju@giant>

	* master.rb, controller.rb, conf.rb:
	 [REQ#166]. assgin_input_processor_n を追加.

Wed Nov 18 18:19:04 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, bjob.rb, exceptions.rb, exceptions.rb, njob.rb:
	  [BUG#163]対応. 例外AbortCreateNodeの追加

Wed Nov 18 14:54:49 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bjob.rb, controller.rb: [BUG#163]対応(まだ不完全)
	* port.rb: [BUG#165]対応. SizedPoolQueue#push_bufのバグ

Fri Nov 13 19:13:58 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-group-by.rb, n-group-by.rb: [REQ#164]対応
	* controller.rb: デバッグメッセージ追加

Mon Nov  9 18:47:22 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy, fairy.conf, conf.rb: MASTER_MAX_ACTIVE_PROCESSORプロパティ追加
	* master.rb, node.rb, controller.rb, processor.rb: [REQ#162]対応
