@@ -61,8 +61,9 @@ module Fairy
 ##CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 CONF.FILEBUFFEREDQUEUE_THRESHOLD = 100000/2
 
-CONF.SORTEDQUEUE_POOL_THRESHOLD = CONF.POOLQUEUE_POOL_THRESHOLD
-##CONF.SORTEDQUEUE_THRESHOLD = 10000/2
+##CONF.SORTEDQUEUE_POOL_THRESHOLD = CONF.POOLQUEUE_POOL_THRESHOLD
+#CONF.SORTEDQUEUE_POOL_THRESHOLD = 1000
+##CONF.SORTEDQUEUE_THRESHOLD = 1000/2
 CONF.SORTEDQUEUE_THRESHOLD = 100000/2
 #CONF.SORTEDQUEUE_THRESHOLD = 1000
 ##CONF.SORTEDQUEUE_SORTBY = proc{|v| v}
